<resources>
    <string name="app_name">TodoAppJava</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_todo">TODO FRAGMENT</string>
    <string name="fragment_completed">COMPLETED FRAGMENT</string>

    <string name="todo_tab_title">Todo\'s</string>
    <string name="completed_tab_title">Completed</string>

    <string name="title_add_screen">Add todo</string>
    <string name="title_settings_screen">Settings</string>

    <string name="add_input_name_title">Name</string>
    <string name="add_input_deadline_title">Deadline</string>
    <string name="add_input_category_title">Category</string>

    <string name="no_deadline_checkbox_text">No deadline</string>
</resources>
